# pangolin-eval

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  integration_request.md  report_feedback.md
.github/workflows/: ci.yml  release.yml
docs/: COMPATIBILITY.md  EXTENSIONS.md  LAUNCH.md  MIGRATIONS.md  RELEASE.md  REPORT_SCHEMA.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md
examples/agent_trace/: trace_events.json
examples/ci_gate/: config.json
examples/litellm_gateway/: config.json
examples/ollama_openai_compatible/: config.json
examples/openai_compatible/: config.json
examples/rag_eval/: config.json
examples/simple_model_compare/: config.json  pricing_catalog.json
examples/vllm_openai_compatible/: config.json
schemas/: eval-config.v1.json  otel-export.v1.json  pricing-catalog.v1.json  rag-report.v1.json  report.v1.json  report.v2.json  report.v3.json  report.v4.json  trace-events.v1.json  tracecards.v1.json
src/pangolin_eval/: __init__.py  aggregation.py  cli.py  config.py  exports.py  gates.py  models.py  pricing.py  rag.py  recommendations.py  reporting.py  runner.py  safety.py  scoring.py  tracecards.py
src/pangolin_eval/providers/: __init__.py  base.py  mock.py  openai_compatible.py
tests/: test_aggregation.py  test_cli.py  test_config.py  test_exports.py  test_gates.py  test_openai_compatible_provider.py  test_pricing.py  test_rag.py  test_recommendations.py  test_reporting.py  test_runner.py  test_scoring.py  test_tracecards.py  test_version.py
