[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pangolin-eval"
version = "0.2.3"
description = "Measure LLM workloads across cost, latency, quality, and reliability."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Aiden Ahmet Erdogan" }
]
keywords = ["llm", "llmops", "rag", "ai", "cost", "evaluation", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aidenerdogan/pangolin-eval"
Repository = "https://github.com/aidenerdogan/pangolin-eval"
Issues = "https://github.com/aidenerdogan/pangolin-eval/issues"
Changelog = "https://github.com/aidenerdogan/pangolin-eval/blob/main/CHANGELOG.md"

[project.scripts]
pangolin-eval = "pangolin_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
